Fix overflow-x to prevent safari horizontal scroll

--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@
   margin: 0;
   padding: 0;
 }
+
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
   overflow-x: hidden;
